--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,13 @@
 <div class="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Добро пожаловать в Пример</h1>
 
   <h2>
-    This is the home page for the
+    Это домашняя страница для Примера приложения
     <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+    .
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  <%= link_to "Зарегистрироваться!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
