--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<% provide(:title, 'Регистрация') %>
+<h1>Регистрация</h1>
 <p>Find me in app/views/users/new.html.erb</p>
