--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,9 +4,26 @@
       <%= link_to "sample app", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Начало",    root_path %></li>
-          <li><%= link_to "Помощь",    help_path %></li>
-          <li><%= link_to "Sign in", '#' %></li>
+          <li><%= link_to "Начало",   root_path %></li>
+          <li><%= link_to "Помощь",   help_path %></li>
+          <% if signed_in? %>
+            <li><%= link_to "Пользователи", '#' %></li>
+            <li id="fat-menu" class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Account <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Профиль", current_user %></li>
+                <li><%= link_to "Настройки", '#' %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "Выход", signout_path, method: "delete" %>
+                </li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "Войти", signin_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
