--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,20 +4,7 @@
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-
-      <%= f.label :name, "Имя" %>
-      <%= f.text_field :name %>
-
-      <%= f.label :email, "Е-мейл" %>
-      <%= f.text_field :email %>
-
-      <%= f.label :password, "Пароль" %>
-      <%= f.password_field :password %>
-
-      <%= f.label :password_confirmation, "Подтверждение" %>
-      <%= f.password_field :password_confirmation %>
-
+      <%= render 'fields', f: f %>
       <%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
     <% end %>
 
