--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,30 @@
-<div class="center hero-unit">
-  <h1>Добро пожаловать в Пример</h1>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="span8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
+  <div class="center hero-unit">
+    <h1>Добро пожаловать в Пример</h1>
 
-  <h2>
-    Это домашняя страница для Примера приложения
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    .
-  </h2>
+    <h2>
+      Это домашняя страница для Примера приложения
+      <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
+      .
+    </h2>
 
-  <%= link_to "Зарегистрироваться!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+    <%= link_to "Зарегистрироваться!", signup_path, class: "btn btn-large btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% end %>
