--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,11 +1,3 @@
 <li>
-  <span class="content"><%= micropost.content %></span>
-  <span class="timestamp">
-    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-  </span>
-  <% if current_user?(micropost.user) %>
-    <%= link_to "Удалить", micropost, method: :delete,
-                                     data: { confirm: "Вы уверены?" },
-                                     title: micropost.content %>
-  <% end %>
+  <%= render 'shared/messages', object: micropost %>
 </li>
