--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,7 +1,8 @@
 <%= form_for(@micropost) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "Введите новое сообщение..." %>
+    <%= f.text_area :content, placeholder: "Введите новое сообщение...", onkeyup: "onTypeChar()" %>
+     <p>Characters left: <span id="char_count_out_id">140</span></p>
   </div>
   <%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
 <% end %>
